# msu

./: README.md  main.hs  msu.cabal  msu.gemspec  package.yaml
MSU/: Display.hs  Hooks.hs
MSU/Xrandr/: Command.hs  Parse.hs
app/: Main.hs
lib/: msu.rb
lib/msu/: command.rb  display.rb  displays.rb  hook.rb  line_parser.rb  mode.rb  pos.rb  rect.rb  version.rb
spec/: msu_spec.rb  spec_helper.rb
spec/msu/: command_spec.rb  display_spec.rb  displays_spec.rb
src/MSU/: Context.hs  Display.hs  Hooks.hs  Match.hs  Monitors.hs
src/MSU/Xrandr/: Command.hs  Parse.hs
test/MSU/: MonitorsSpec.hs
test/MSU/Xrandr/: ParseSpec.hs
