name:          msu
version:       0.0.1
license:       MIT
copyright:     (c) 2013 Pat Brisbin
author:        Pat Brisbin <pbrisbin@gmail.com>
maintainer:    Pat Brisbin <pbrisbin@gmail.com>
build-type:    Simple
cabal-version: >= 1.8

executable msu
  main-is: main.hs

  ghc-options: -Wall -Werror

  build-depends: base == 4.*
               , directory
               , filepath
               , mtl
               , parsec
               , process
               , xdg-basedir
